--- a/templates/partials/cart_single_product.html
+++ b/templates/partials/cart_single_product.html
@@ -1,5 +1,5 @@
-<li class="aside-product-list-item product-{{ slug }}">
-    <a href="#" class="remove">×</a>
+<li class="aside-product-list-item" id="product-{{ slug }}">
+    <a class="remove quick-remove" data-slug="{{ slug }}">×</a>
     <a href="#">
         <img src="{{ img }}" width="68" height="84" alt="Image">
         <span class="product-title">{{ title }}</span>
