--- a/templates/parent/base.html
+++ b/templates/parent/base.html
@@ -34,6 +34,10 @@
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="{% static 'css/style.min.css' %}">
+
+    <!-- Jquery -->
+    <script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static 'js/jquery-migrate-3.3.2.min.js' %}"></script>
     {% block header %}
     	
     {% endblock %}
@@ -58,8 +62,6 @@
 
 <!-- Vendors JS -->
 <script src="{% static 'js/modernizr-3.11.7.min.js' %}"></script>
-<script src="{% static 'js/jquery-3.6.0.min.js' %}"></script>
-<script src="{% static 'js/jquery-migrate-3.3.2.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
 <!-- Plugins JS -->
