feat(base-checkout-page)

--- a/cart/templates/product-cart.html
+++ b/cart/templates/product-cart.html
@@ -91,7 +91,7 @@
                                 </tbody>
                             </table>
                             <div class="text-center text-sm-end">
-                                <a href="#" class="checkout-button">برای تسویه حساب اقدام کنید</a>
+                                <a href="{% url 'order:checkout' %}" class="checkout-button">برای تسویه حساب اقدام کنید</a>
                             </div>
                         </div>
                     </div>
