feat(completed product page)
Add: related products
Fixed: Cart issues and modal issues

--- a/templates/partials/product_quick_view.html
+++ b/templates/partials/product_quick_view.html
@@ -32,7 +32,7 @@
 {#                                        </div>#}
 {#                                        <button type="button" class="product-review-show">150 بررسی</button>#}
 {#                                    </div>#}
-                                    <p class="mb-6">{{ obj.description }}</p>
+                                    <p class="mb-6">{{ obj.short_description }}</p>
                                     <div class="product-details-pro-qty">
                                         <div class="pro-qty">
                                             <input type="text" title="Quantity" id="quick-quantity-{{ obj.slug }}" value="1" min="1" max="{{ obj.inventory }}">
